# hoolang

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  bitbucket-pipelines.yml  confighoo.py  getlibs.py  getpackages.py  hoo.ds  hoomain.s  instructions.json
hoo/: CMakeLists.txt  HooConfig.hh.in  hooconfig.hh.in
hoo/ast/: AST.hh  ArrayAccessExpression.cpp  ArrayAccessExpression.hh  ArrayDataTypeSpecification.cpp  ArrayDataTypeSpecification.hh  ArrayTypeSpec.cpp  ArrayTypeSpec.hh  BasicDataTypeSpecification.cpp  BasicDataTypeSpecification.hh  BasicDataTypes.cpp  BasicDataTypes.hh  BasicTypeSpec.cpp  BasicTypeSpec.hh  BinaryExpression.cpp  BinaryExpression.hh  CMakeLists.txt  CastExpression.cpp  CastExpression.hh  ClassBody.cpp  ClassBody.hh  ClassBodyItem.cpp  ClassBodyItem.hh  ClassDefinition.cpp  ClassDefinition.hh  CompoundStatement.cpp  CompoundStatement.hh  Declaration.cpp  Declaration.hh  DeclarationStatement.cpp  DeclarationStatement.hh  Declarator.hh  Definition.cpp  Definition.hh  Expression.cpp  Expression.hh  ExpressionStatement.cpp  ExpressionStatement.hh  FunctionDeclaration.cpp  FunctionDeclaration.hh  FunctionDefinition.cpp  (+37 more)
hoo/common/: CMakeLIsts.txt  CMakeLists.txt  Logger.cpp  Logger.hh  NotImplementedException.cpp  NotImplementedException.hh  Utility.cpp  Utility.hh
hoo/emitter/: BinaryExpressionEmitter.cpp  BinaryExpressionEmitter.hh  BlockContext.cpp  BlockContext.hh  CMakeLists.txt  CastEmitter.cpp  CastEmitter.hh  ClassDefinitionEmitter.cpp  ClassDefinitionEmitter.hh  DefinitionEmitter.cpp  DefinitionEmitter.hh  EmitterBase.cpp  EmitterBase.hh  EmitterContext.cpp  EmitterContext.hh  EmitterException.cpp  EmitterException.hh  EmitterUtils.cpp  EmitterUtils.hh  ExpressionEmitter.cpp  ExpressionEmitter.hh  FunctionDefinitionEmitter.cpp  FunctionDefinitionEmitter.hh  HooJIT.cpp  HooJIT.hh  StatementEmitter.cpp  StatementEmitter.hh  UnitEmitter.cpp  UnitEmitter.hh
hoo/include/: Character.hh  CharacterClass.hh  CodeBuffer.hh  CodeEngineFactory.hh  CodeEnginex86_64.hh  HooTypes.hh  ICodeEngine.hh  ICodeGeneratable.hh  JIT.hh  JITException.hh  JITModule.hh  Method.hh  MethodParam.hh  Module.hh  Object.hh  StackItem.hh  StackScope.hh  String.hh  StringClass.hh  TypeSpec.hh  Value.hh
hoo/parser/: BaseError.cpp  BaseError.hh  CMakeLists.txt  CompilationContext.cpp  CompilationContext.hh  ErrorListener.cpp  ErrorListener.hh  InvalidExprType.cpp  InvalidExprType.hh  Module.cpp  Module.hh  ParseError.cpp  ParseError.hh  ParseException.cpp  ParseException.hh  ParserContext.cpp  ParserContext.hh  ParserDriver.cpp  ParserDriver.hh  SyntaxError.cpp  SyntaxError.hh  UnitVisitor.cpp  UnitVisitor.hh  extras.cmake
hoo/sample-templates/: test01.ll
hoo/src/: Character.cpp  CharacterClass.cpp  CodeBuffer.cpp  CodeEngineFactory.cpp  ICodeGeneratable.cpp  JIT.cpp  JITException.cpp  JITModule.cpp  Method.cpp  MethodParam.cpp  Module.cpp  Object.cpp  StackItem.cpp  StackScope.cpp  String.cpp  StringClass.cpp  TypeSpec.cpp  Value.cpp
hoo/test/: CMakeLists.txt  HooTest.hh  TestResult.cpp  TestResult.hh  TestUnit.cpp  TestUnit.hh
hoo/tests/: CodeBufferTest.cpp  CodeBufferTest.hh  HooTest.cpp  JITBasicTest.cpp  JITBasicTest.hh  JITTest.cpp  JITTest.hh  MethodBasicTest.cpp  MethodBasicTest.hh  TypeTest.cpp  TypeTest.hh  ValueTest.cpp  ValueTest.hh
hooast/: ArrayAccessExpression.cpp  BasicDataTypes.cpp  BinaryExpression.cpp  CMakeLists.txt  ClassDefinition.cpp  CompoundStatement.cpp  CompoundStatement.hh  Declaration.hh  DeclarationStatement.cpp  Definition.cpp  Expression.hh  ExpressionStatement.cpp  FunctionDeclaration.hh  FunctionDefinition.cpp  FunctionDefinition.hh  LiteralExpression.hh  NoopStatement.cpp  NoopStatement.hh  Operator.hh  ReferenceDataTypeSpecification.cpp  ReferenceDataTypeSpecification.hh  ReferenceExpression.hh  ReturnStatement.cpp  Statement.cpp  Statement.hh  TypeSpecification.hh  VariableDeclaration.hh
hooc/: CMakeLists.txt
hooc/grammar/: Hoo.g4  Parser.y  Terminals.g4  hclexer.l  hclexer.ll  hcparser.y  hcparser.yy
hooc/include/: AccessSpecifier.hh  BinaryExpression.hh  Class.hh  CompilationError.hh  CompilationUnit.hh  Expression.hh  ExpressionStatement.hh  Lexer.hh  LexerError.hh  Listener.hh  LiteralExpression.hh  Module.hh  Node.hh  Operator.hh  ParseContext.hh  ParserDriver.hh  Statement.hh  StatementList.hh  Token.hh  TokenDescriptor.hh  Unit.hh  hcbinaryexpr.hh  hcbuffer.h  hccompiler.h  hcexpr.hh  hcexprstmt.hh  hcliteralexpr.h  hcliteralexpr.hh  hclogger.hh  hcnode.hh  hcoperator.h  hcoperator.hh  hcprog.h  hcprog.hh  hcstmt.hh  hcstmtlist.hh
hooc/src/: AccessSpecifier.hh  BinaryExpression.cpp  Class.cpp  Class.hh  CompilationError.cpp  CompilationUnit.cpp  Expression.cpp  Expression.hh  ExpressionStatement.cpp  ExpressionStatement.hh  Lexer.cpp  LexerError.cpp  Listener.cpp  LiteralExpression.cpp  LiteralExpression.hh  Logger.cpp  Logger.hh  Module.cpp  Node.cpp  Node.hh  Operator.cpp  ParseContext.cpp  ParseContext.hh  ParserDriver.cpp  Statement.cpp  Statement.hh  StatementList.cpp  StatementList.hh  Token.cpp  TokenDescriptor.cpp  Unit.cpp  hcbinaryexpr.cpp  hccompiler.c  hccompiler.cpp  hcexpr.cpp  hcexprstmt.c  hcliteralexpr.c  hcliteralexpr.cpp  hclogger.cpp  hcmain.cpp  (+5 more)
hooc/test/: ArithmeticStmtTest.cpp  ArithmeticStmtTest.hh  hooctest.cpp
hooc/tests/: ArithmeticStmtTest.cpp  ArithmeticStmtTest.hh  BinaryExpression.cpp  BinaryExpressionTest.cpp  BooleanLiteral.cpp  BooleanLiteralTest.cpp  CharacterLiteral.cpp  CharacterLiteralTest.cpp  DecimalLiteral.cpp  DecimalLiteralTest.cpp  EncoderX64Test.cpp  Function001.cpp  FunctionDeclaration.cpp  FunctionTest001.cpp  GrammarTest.cpp  HoocTest.cpp  HoocTestHelper.cpp  HoocTestHelper.hh  IdentifierPrimaryExpression.cpp  IntegerLiteral.cpp  InvocationExpression.cpp  InvocationExpressionTest.cpp  LexerTest.cpp  ModuleNameTest.cpp  ModuleNameTest.hh  NameManglerTest.cpp  PrimaryExpression.cpp  ReturnStatement.cpp  ReturnStatementTest.cpp  StringLiteral.cpp  StringLiteralTest.cpp  TestHelper.cpp  TestHelper.hh  UtilityTest.cpp  VariableDeclaration.cpp  X86EmitterTest.cpp  (+4 more)
(+295 files in other folders)
