CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
CMAKE_POLICY(SET CMP0074 NEW)
PROJECT(hoolang)

SET(CMAKE_VERBOSE_MAKEFILE ON)
MESSAGE("CMake Version: ${CMAKE_VERSION}")
SET(CMAKE_CXX_STANDARD 14)

INCLUDE("${CMAKE_SOURCE_DIR}/packages/index.cmake")

FIND_PACKAGE(antlr4-runtime REQUIRED)
FIND_PACKAGE(antlr4-generator REQUIRED)
FIND_PACKAGE(Java REQUIRED)
FIND_PACKAGE(LLVM)

ENABLE_TESTING()
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/hoo/test")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/hoo/common")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/hoo/ast")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/hoo/parser")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/hoo/emitter")

INSTALL(TARGETS hooemitter
    PUBLIC_HEADER DESTINATION include/hoo/emitter)
INSTALL(TARGETS hooparser
    PUBLIC_HEADER DESTINATION include/hoo/parser)
INSTALL(DIRECTORY "${CMAKE_SOURCE_DIR}/hoo/parser/visitors"
    DESTINATION include/hoo/parser
    FILES_MATCHING PATTERN *.hh)
INSTALL(TARGETS hooast
    PUBLIC_HEADER DESTINATION include/hoo/ast)
INSTALL(TARGETS hoocommon
    PUBLIC_HEADER DESTINATION include/hoo/common)
INSTALL(TARGETS hootest
    PUBLIC_HEADER DESTINATION include/hoo/test)
INSTALL(FILES "${CMAKE_SOURCE_DIR}/LICENSE.md"
    DESTINATION share)
