CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
CMAKE_POLICY(SET CMP0074 NEW)
PROJECT(hoolang)

SET(CMAKE_VERBOSE_MAKEFILE ON)
MESSAGE("CMake Version: ${CMAKE_VERSION}")
SET(CMAKE_CXX_STANDARD 14)

FIND_PACKAGE(Java COMPONENTS Runtime)
FIND_PACKAGE(antlr4-generator REQUIRED)
FIND_PACKAGE(antlr4-runtime REQUIRED)
FIND_PACKAGE(LLVM REQUIRED CONFIG)
FIND_PACKAGE(GTest REQUIRED)
INCLUDE_DIRECTORIES(${LLVM_INCLUDE_DIRS})
separate_arguments(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
add_definitions(${LLVM_DEFINITIONS_LIST})

ENABLE_TESTING()
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/hoo/test")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/hoo/common")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/hoo/ast")
SET(GENERATED_PARSER_DIR "")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/hoo/parser")
MESSAGE("Parser files are generated at ${GENERATED_PARSER_DIR}")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/hoo/emitter")
ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/experiments/llvm-examples/HowToUseLLJIT")
